--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ int/
 lib/
 ScriptingProject/LuaProject/.vs/LuaProject/v17/ipch/AutoPCH/849d1ac418d5e37c/MAIN.ipch
 ScriptingProject/LuaProject/.vs/LuaProject/v17/ipch/AutoPCH/849d1ac418d5e37c/MAIN.ipch
+*.ipch
