--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ ScriptingProject/LuaProject/.vs/LuaProject/v17/ipch/AutoPCH/849d1ac418d5e37c/MAI
 ScriptingProject/LuaProject/.vs/LuaProject/v17/ipch/AutoPCH/849d1ac418d5e37c/MAIN.ipch
 *.ipch
 /ScriptingProject/LuaProject/.vs/LuaProject/v17/ipch
+ScriptingProject/LuaProject/.vs/LuaProject/v17/ipch/AutoPCH/849d1ac418d5e37c/MAIN.ipch
+/ScriptingProject/LuaProject/.vs/LuaProject/v17/ipch
