--- a/ScriptingProject/LuaProject/Application/Application.vcxproj.filters
+++ b/ScriptingProject/LuaProject/Application/Application.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClCompile Include="Scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PoisonSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Components.hpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LuaBindings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="fizzubzz.lua" />
@@ -34,9 +43,20 @@
     <None Include="transform-test.lua" />
     <None Include="vector.lua" />
     <None Include="transform.lua" />
+    <None Include="sceneDemo.lua" />
+    <None Include="monster.lua" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Scene.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PoisonSystem.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="System.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaBindings.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
